04_git/aws/01-upstream/02-aws-upstream/01_bootstrap/vault/yaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress-02-aws-upstream
  namespace: vault
spec:
  ingressClassName: external-nginx
  rules:
    - host: 02-aws-upstream-vault.panwang.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-02-aws-upstream-ui
                port:
                  number: 8200
